# niji

./: README.md  cog.toml  justfile  rustfmt.toml
.github/workflows/: check_commits.yml  deploy-docs.yml  release-plz.yml  release.yml  release_pr.yml  test.yml
assets/modules/gtk/: colors.lua  install.lua  module.lua
assets/modules/gtk-adw/: deps.txt  module.lua
assets/modules/hyprland/: module.lua
assets/modules/hyprpaper/: hyprpaper.conf.mustache  module.lua
assets/modules/kitty/: module.lua  niji.conf.mustache
assets/modules/mako/: config.mustache  module.lua
assets/modules/qt/: deps.txt  module.lua  niji.conf.mustache
assets/modules/sway/: module.lua  theme.mustache
assets/modules/swaylock/: module.lua
assets/modules/waybar/: module.lua  style.css.mustache
assets/modules/wob/: module.lua
assets/themes/catppuccin-frappe/: theme.toml
assets/themes/catppuccin-latte/: theme.toml
assets/themes/dracula/: theme.toml
assets/themes/gruvbox/: theme.toml
assets/themes/gruvbox-light/: theme.toml
assets/themes/tokyonight/: theme.toml
crates/console/src/: console.rs
crates/main/: Cargo.toml
crates/main/src/: cli.rs
crates/niji/: CHANGELOG.md  Cargo.toml  build.rs  rust-toolchain.toml
crates/niji/src/: app.rs  cli.rs  config.rs  file_manager.rs  files.rs  main.rs  managed_fs.rs  module.rs  module_manager.rs  state_manager.rs  template.rs  test_theme.toml  theme.rs  theme_manager.rs
crates/niji/src/cli/: mod.rs  syntax.rs
crates/niji/src/lua/: runtime.rs
crates/niji/src/lua/api/: color.rs  console.rs  filesystem.rs  mod.rs  module_meta.rs  os.rs  template.rs  theme.rs  util.rs  xdg.rs
crates/niji/src/types/: color.rs
crates/niji/src/utils/: fs.rs  oklch.rs  xdg.rs
crates/niji/tests/: common.rs  general.rs  theme.rs
crates/niji/tests/common/: mod.rs
crates/niji/tests/theme.in/niji/: themes
crates/niji_console/: CHANGELOG.md  Cargo.toml
crates/niji_console/src/: api.rs  console.rs  lib.rs  logger.rs
crates/niji_macros/: CHANGELOG.md  Cargo.toml
crates/niji_macros/src/: lib.rs
crates/niji_templates/: CHANGELOG.md  Cargo.toml
docs/: book.toml
docs/src/: README.md  SUMMARY.md  builtin-themes.md  cli.md  configuration.md  custom-themes.md  getting-started.md
(+22 files in other folders)
