[package]
name = "niji"
version = "0.6.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"

[dependencies]
niji_console = { path = "../niji_console" }
niji_macros = { path = "../niji_macros" }
niji_templates = { path = "../niji_templates" }

anyhow = "1.0.100"
chrono = "0.4.42"
csv = "1.4.0"
log = "0.4.28"
mlua = { version = "0.11.4", features = ["luajit", "error-send", "macros"] }
oklab = "1.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.1"
shellexpand = "3.1.1"
toml = "0.9.8"
xattr = "1.6.1"
clap = { version = "4.5.51", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.1.1"
cargo-edit = "0.13.8"
just = "1.43.1"
tempfile = "3.23.0"

[build-dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
